--- a/Muse.net/Muse.Net.csproj
+++ b/Muse.net/Muse.Net.csproj
@@ -30,6 +30,7 @@
 
   <ItemGroup>
     <PackageReference Include="System.Memory" Version="4.5.1" />
+    <PackageReference Include="System.ValueTuple" Version="4.5.0" />
   </ItemGroup>
 
 
