Fixed wonky event handler of museclient.

--- a/Muse.Net.Uwp/Muse.Net.Uwp.csproj
+++ b/Muse.Net.Uwp/Muse.Net.Uwp.csproj
@@ -128,6 +128,7 @@
     <Compile Include="Muse\Command.cs" />
     <Compile Include="Muse\Models.cs" />
     <Compile Include="Muse\MuseClient.cs" />
+    <Compile Include="Muse\MuseClientNotifyEegEventArgs.cs" />
     <Compile Include="Muse\MuseGuid.cs" />
     <Compile Include="Muse\Parse.cs" />
     <Compile Include="Muse\Preset.cs" />
