--- a/Muse.Net.Uwp/Muse.Net.Uwp.csproj
+++ b/Muse.Net.Uwp/Muse.Net.Uwp.csproj
@@ -120,8 +120,6 @@
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Console\BleScanner.cs" />
-    <Compile Include="Console\Print.cs" />
     <Compile Include="Gatt\CharacteristicExtensions.cs" />
     <Compile Include="Gatt\Language.cs" />
     <Compile Include="Muse\Channel.cs" />
@@ -131,17 +129,18 @@
     <Compile Include="Muse\MuseClientNotifyEegEventArgs.cs" />
     <Compile Include="Muse\MuseGuid.cs" />
     <Compile Include="Muse\Parse.cs" />
-    <Compile Include="Muse\Preset.cs" />
     <Compile Include="Muse\Scale.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\BrainFrequencyAnalyser.cs" />
     <Compile Include="Services\FFTSamplerService.cs" />
     <Compile Include="Services\Fourier.cs" />
+    <Compile Include="Services\FourierService.cs" />
     <Compile Include="Services\FrequencyRange.cs" />
     <Compile Include="Services\FrequencyRangeGroup.cs" />
     <Compile Include="Services\FrequencyRanges.cs" />
     <Compile Include="Services\IBrainFrequencyAnalyser.cs" />
     <Compile Include="Services\IFFTSamplerService.cs" />
+    <Compile Include="Services\IFourierService.cs" />
     <Compile Include="Services\IMuseSamplerService.cs" />
     <Compile Include="Services\IPlotterService.cs" />
     <Compile Include="Services\MuseSamplerService.cs" />
