Correcting wonky event handlers.

--- a/Muse.Net.Uwp/Muse.Net.Uwp.csproj
+++ b/Muse.Net.Uwp/Muse.Net.Uwp.csproj
@@ -120,6 +120,15 @@
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="..\Muse.net\Client\MuseClientNotifyAccelerometerEventArgs.cs">
+      <Link>Client\MuseClientNotifyAccelerometerEventArgs.cs</Link>
+    </Compile>
+    <Compile Include="..\Muse.net\Client\MuseClientNotifyGyroscopeEventArgs.cs">
+      <Link>Client\MuseClientNotifyGyroscopeEventArgs.cs</Link>
+    </Compile>
+    <Compile Include="..\Muse.net\Client\MuseClientNotifyTelemetryEventArgs.cs">
+      <Link>Client\MuseClientNotifyTelemetryEventArgs.cs</Link>
+    </Compile>
     <Compile Include="..\Muse.net\Extensions\CharacteristicExtensions.cs">
       <Link>Extensions\CharacteristicExtensions.cs</Link>
     </Compile>
