--- a/Muse.Net.Services/Muse.Net.Services.csproj
+++ b/Muse.Net.Services/Muse.Net.Services.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Memory" Version="4.5.4" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Muse.Net.Models\Muse.Net.Models.csproj" />
   </ItemGroup>
 
